--- a/src/app/Ui/Modules/configuration/Tipo_usuario/components/tables/table-lista-tipo-usuario/table-lista-tipo-usuario.component.html
+++ b/src/app/Ui/Modules/configuration/Tipo_usuario/components/tables/table-lista-tipo-usuario/table-lista-tipo-usuario.component.html
@@ -4,12 +4,32 @@
   <table mat-table [dataSource]="dataSource">
     <ng-container matColumnDef="Rol">
       <th mat-header-cell *matHeaderCellDef class="mat-primary"> Rol </th>
-      <td mat-cell *matCellDef="let element"> {{element.rol}} </td>
+      <td class="rol" mat-cell *matCellDef="let element">
+        <div class="container-data">
+          <div class="container-icon">
+            <i class="uil uil-briefcase-alt"></i>
+          </div>
+
+          {{element.rol}}
+        </div>
+
+        </td>
     </ng-container>
 
     <ng-container matColumnDef="Estado">
       <th mat-header-cell *matHeaderCellDef class="mat-accent" > Estado </th>
-      <td mat-cell *matCellDef="let element"> @if (element.estado == '1') { Activo } @else {Inactivo} </td>
+      <td mat-cell *matCellDef="let element">
+
+        <div class="px-6 py-3">
+          @if (element.estado == "1") {
+          <td-estado-1 />
+          } @if (element.estado == "2") {
+          <td-estado-2 />
+          } @if (element.estado != "1") {
+          <td-estado-3 [estado]="'Inactivo'" />
+          }
+        </div>
+      </td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
