13_02_2025 ORDENAMIENTO CODIGO HTML INVENTARIOS ASIGNAR

--- a/src/app/Ui/Modules/Carga_Inventario/Components/lista-inventarios-cargados/lista-inventarios-cargados.component.html
+++ b/src/app/Ui/Modules/Carga_Inventario/Components/lista-inventarios-cargados/lista-inventarios-cargados.component.html
@@ -1,17 +1,24 @@
+  <!-- =================================================================================== -->
+  <!-- Apartado filtros -->
+  <!-- =================================================================================== -->
 <div class="container">
   <mat-form-field class="w-[20rem]">
     <mat-label>Buscar inventario</mat-label>
-    <input matInput (keyup)="applyFilter($event)" placeholder="Ingresar descripción" #input>
+    <input
+      matInput
+      (keyup)="applyFilter($event)"
+      placeholder="Ingresar descripción"
+      #input
+    />
   </mat-form-field>
 </div>
 
-
 <table mat-table [dataSource]="dataSource" matSort>
+  <!-- =================================================================================== -->
   <!-- Descripción -->
+  <!-- =================================================================================== -->
   <ng-container matColumnDef="descripcion">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header>
-      Descripción
-    </th>
+    <th mat-header-cell *matHeaderCellDef mat-sort-header>Descripción</th>
     <td mat-cell *matCellDef="let row">
       <button class="px-6 py-3 flex gap-2 align-center">
         <img src="../../../../../../assets/svg/icon_excel.svg" alt="" />
@@ -22,7 +29,9 @@
     </td>
   </ng-container>
 
+  <!-- =================================================================================== -->
   <!-- Usuario -->
+  <!-- =================================================================================== -->
   <ng-container matColumnDef="usuariocreacion">
     <th mat-header-cell *matHeaderCellDef mat-sort-header>Usuario creador</th>
     <td mat-cell *matCellDef="let row">
@@ -35,7 +44,9 @@
     </td>
   </ng-container>
 
+  <!-- =================================================================================== -->
   <!-- Estado -->
+  <!-- =================================================================================== -->
   <ng-container matColumnDef="estado">
     <th mat-header-cell *matHeaderCellDef mat-sort-header>Estado</th>
     <td mat-cell *matCellDef="let row">
@@ -43,7 +54,9 @@
     </td>
   </ng-container>
 
+  <!-- =================================================================================== -->
   <!-- Detalle -->
+  <!-- =================================================================================== -->
   <ng-container matColumnDef="detalle">
     <th mat-header-cell *matHeaderCellDef mat-sort-header>Detalle</th>
     <td mat-cell *matCellDef="let row">
@@ -57,14 +70,15 @@
     </td>
   </ng-container>
 
+  <!-- =================================================================================== -->
   <!-- Asignación -->
+  <!-- =================================================================================== -->
   <ng-container matColumnDef="asignacion">
     <th mat-header-cell *matHeaderCellDef mat-sort-header>Asignación</th>
     <td mat-cell *matCellDef="let row">
-
       <mat-menu #menu="matMenu">
         <agregar-producto />
-        <hr>
+        <hr />
         <opcion-table-asignar-usuario
           [idcarga]="row.idcarga"
           [rucempresa]="row.rucempresa"
@@ -74,33 +88,49 @@
         />
       </mat-menu>
 
-      <button mat-button [matMenuTriggerFor]="menu"><img src="../../../../../../assets/svg/icon-options.svg" alt=""></button>
-
+      <button mat-button [matMenuTriggerFor]="menu">
+        <img src="../../../../../../assets/svg/icon-options.svg" alt="" />
+      </button>
     </td>
   </ng-container>
-
 
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
   <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
 </table>
 
+<!-- =================================================================================== -->
+<!-- PAGINACIÓN INVENTARIO -->
+<!-- =================================================================================== -->
 <mat-paginator
   [pageSizeOptions]="[5, 10, 25, 100]"
   aria-label="Select page of users"
-></mat-paginator>
+/>
 
+
+<!-- =================================================================================== -->
+<!-- DETALLE INVENTARIO -->
+<!-- =================================================================================== -->
 <footer-general />
 
+<!-- =================================================================================== -->
+<!-- DETALLE INVENTARIO -->
+<!-- =================================================================================== -->
 <detalle-carga-inventarios
   [citaSeleccionada]="datosInventario"
   [detalleProductos]="listaProductos"
   [cantidadInventarios]="cantidadListaProductos"
 />
 
+<!-- =================================================================================== -->
+<!-- ASIGNAR INVENTARIO -->
+<!-- =================================================================================== -->
 <registro-asignar-page
   [rucEmpresa]="datosInventario.rucempresa"
   [idCarga]="datosInventario.idcarga"
   [getUsuarios_All]="getUsuarios_All"
 />
 
+<!-- =================================================================================== -->
+<!-- REGISTRO NUEVO PRODUCTO -->
+<!-- =================================================================================== -->
 <registro-producto-new-inventario />
