--- a/src/app/Ui/Modules/configuration/Usuarios/page/registro-usuario/registro-usuario.component.html
+++ b/src/app/Ui/Modules/configuration/Usuarios/page/registro-usuario/registro-usuario.component.html
@@ -5,11 +5,11 @@
       <div class="modal-header  bg-fondo-header ">
 
         <div class="relative overflow-hidden min-h-[auto] text-left rounded-t-xl">
-          <h2 class="mt-8 text-2xl  font-bold text-white dark:text-neutral-200">
+          <h2 class="mt-8 text-2xl  font-bold text-white ">
             Usu<span class="text-[#00D1AE]">arios</span>
           </h2>
 
-          <p class="mt-1 text-sm text-gray-100 dark:text-neutral-400">
+          <p class="mt-1 text-sm text-gray-100 ">
             Ingresa los datos necesarios para el nuevo usuario
           </p>
 
@@ -22,7 +22,7 @@
             <div class="sm:col-span-3">
               <label
                 for="af-account-email"
-                class="inline-block text-sm text-gray-800 mt-2.5 dark:text-neutral-200"
+                class="inline-block text-sm text-gray-800 mt-2.5 "
               >
                 Empresa
               </label>
@@ -63,7 +63,7 @@
             <div class="sm:col-span-3">
               <label
                 for="af-account-email"
-                class="inline-block text-sm text-gray-800 mt-2.5 dark:text-neutral-200"
+                class="inline-block text-sm text-gray-800 mt-2.5"
               >
                 Usuario
               </label>
@@ -76,7 +76,7 @@
                 formControlName="idUsuario"
                 id="af-account-email"
                 type="text"
-                class="border py-2 px-3 pe-11 block w-full border-gray-200 shadow-sm text-sm rounded-lg focus:border-blue-500 focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none dark:bg-neutral-800 dark:border-neutral-700 dark:text-neutral-400 dark:placeholder-neutral-500 dark:focus:ring-neutral-600"
+                class="border py-2 px-3 pe-11 block w-full border-gray-200 shadow-sm text-sm rounded-lg focus:border-blue-500 focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none "
                 placeholder="Ingresar el nombre del usuario"
               />
             </div>
@@ -84,7 +84,7 @@
             <div class="sm:col-span-3">
               <label
                 for="af-account-email"
-                class="inline-block text-sm text-gray-800 mt-2.5 dark:text-neutral-200"
+                class="inline-block text-sm text-gray-800 mt-2.5"
               >
                 Nombre Usuario
               </label>
@@ -97,7 +97,7 @@
                 formControlName="nombreUsuario"
                 id="af-account-email"
                 type="text"
-                class="border py-2 px-3 pe-11 block w-full border-gray-200 shadow-sm text-sm rounded-lg focus:border-blue-500 focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none dark:bg-neutral-800 dark:border-neutral-700 dark:text-neutral-400 dark:placeholder-neutral-500 dark:focus:ring-neutral-600"
+                class="border py-2 px-3 pe-11 block w-full border-gray-200 shadow-sm text-sm rounded-lg focus:border-blue-500 focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none "
                 placeholder="Ingresar el nombre del usuario"
               />
             </div>
@@ -107,7 +107,7 @@
               <div class="inline-block">
                 <label
                   for="af-account-phone"
-                  class="inline-block text-sm text-gray-800 mt-2.5 dark:text-neutral-200"
+                  class="inline-block text-sm text-gray-800 mt-2.5"
                 >
                   Apellido
                 </label>
@@ -122,7 +122,7 @@
                   formControlName="apellidoUsuario"
                   id="af-account-phone"
                   type="text"
-                  class="border py-2 px-3 pe-11 block w-full border-gray-200 shadow-sm -mt-px -ms-px first:rounded-t-lg last:rounded-b-lg sm:first:rounded-s-lg sm:mt-0 sm:first:ms-0 sm:first:rounded-se-none sm:last:rounded-es-none sm:last:rounded-e-lg text-sm relative focus:z-10 focus:border-blue-500 focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none dark:bg-neutral-800 dark:border-neutral-700 dark:text-neutral-400 dark:placeholder-neutral-500 dark:focus:ring-neutral-600"
+                  class="border py-2 px-3 pe-11 block w-full border-gray-200 shadow-sm -mt-px -ms-px first:rounded-t-lg last:rounded-b-lg sm:first:rounded-s-lg sm:mt-0 sm:first:ms-0 sm:first:rounded-se-none sm:last:rounded-es-none sm:last:rounded-e-lg text-sm relative focus:z-10 focus:border-blue-500 focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none "
                   placeholder="Ingresa el apellido del usuariox"
                 />
               </div>
@@ -131,7 +131,7 @@
             <div class="sm:col-span-3">
               <label
                 for="af-account-email"
-                class="inline-block text-sm text-gray-800 mt-2.5 dark:text-neutral-200"
+                class="inline-block text-sm text-gray-800 mt-2.5"
               >
                 cargo
               </label>
@@ -150,8 +150,8 @@
                 "searchWrapperClasses": "bg-white p-2 -mx-1 sticky top-0 dark:bg-neutral-900",
                 "placeholder": "Seleccionar Usuario...",
                 "toggleTag": "<button type=\"button\" aria-expanded=\"false\"><span class=\"me-2\" data-icon></span><span class=\"text-gray-800 dark:text-neutral-200 \" data-title></span></button>",
-                "toggleClasses": "hs-select-disabled:pointer-events-none hs-select-disabled:opacity-50 relative py-3 ps-4 pe-9 flex gap-x-2 text-nowrap w-full cursor-pointer bg-white border border-gray-200 rounded-lg text-start text-sm focus:outline-none focus:ring-2 focus:ring-blue-500 dark:bg-neutral-900 dark:border-neutral-700 dark:text-neutral-400 dark:focus:outline-none dark:focus:ring-1 dark:focus:ring-neutral-600",
-                "dropdownClasses": "border mt-2 max-h-72 pb-1 px-1 space-y-0.5 z-20 w-full bg-white border border-gray-200 rounded-lg overflow-hidden overflow-y-auto [&::-webkit-scrollbar]:w-2 [&::-webkit-scrollbar-thumb]:rounded-full [&::-webkit-scrollbar-track]:bg-gray-100 [&::-webkit-scrollbar-thumb]:bg-gray-300 dark:[&::-webkit-scrollbar-track]:bg-neutral-700 dark:[&::-webkit-scrollbar-thumb]:bg-neutral-500 dark:bg-neutral-900 dark:border-neutral-700",
+                "toggleClasses": "hs-select-disabled:pointer-events-none hs-select-disabled:opacity-50 relative py-3 ps-4 pe-9 flex gap-x-2 text-nowrap w-full cursor-pointer bg-white border border-gray-200 rounded-lg text-start text-sm focus:outline-none focus:ring-2 focus:ring-blue-500 ",
+                "dropdownClasses": "border mt-2 max-h-72 pb-1 px-1 space-y-0.5 z-20 w-full bg-white border border-gray-200 rounded-lg overflow-hidden overflow-y-auto [&::-webkit-scrollbar]:w-2 [&::-webkit-scrollbar-thumb]:rounded-full [&::-webkit-scrollbar-track]:bg-gray-100 [&::-webkit-scrollbar-thumb]:bg-gray-300 dark:[&::-webkit-scrollbar-track]:bg-neutral-700 dark:[&::-webkit-scrollbar-thumb]:bg-neutral-500 dark:bg-neutral-900 ",
                 "optionClasses": "py-2 px-4 w-full text-sm text-gray-800 cursor-pointer hover:bg-gray-100 rounded-lg focus:outline-none focus:bg-gray-100 dark:bg-neutral-900 dark:hover:bg-neutral-800 dark:text-neutral-200 dark:focus:bg-neutral-800",
                 "optionTemplate": "<div><div class=\"flex items-center\"><div class=\"me-2\" data-icon></div><div class=\"text-gray-800 dark:text-neutral-200 \" data-title></div></div></div>",
                 "extraMarkup": "<div class=\"absolute top-1/2 end-3 -translate-y-1/2\"><svg class=\"shrink-0 size-3.5 text-gray-500 dark:text-neutral-500 \" xmlns=\"http://www.w3.org/2000/svg\" width=\"24\" height=\"24\" viewBox=\"0 0 24 24\" fill=\"none\" stroke=\"currentColor\" stroke-width=\"2\" stroke-linecap=\"round\" stroke-linejoin=\"round\"><path d=\"m7 15 5 5 5-5\"/><path d=\"m7 9 5-5 5 5\"/></svg></div>"
@@ -169,7 +169,7 @@
             <div class="sm:col-span-3">
               <label
                 for="af-account-email"
-                class="inline-block text-sm text-gray-800 mt-2.5 dark:text-neutral-200"
+                class="inline-block text-sm text-gray-800 mt-2.5 "
               >
                 contraseña
               </label>
@@ -183,7 +183,7 @@
                 formControlName="contraseniaUsuario"
                 id="af-account-email"
                 type="text"
-                class="border py-2 px-3 pe-11 block w-full border-gray-200 shadow-sm text-sm rounded-lg focus:border-blue-500 focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none dark:bg-neutral-800 dark:border-neutral-700 dark:text-neutral-400 dark:placeholder-neutral-500 dark:focus:ring-neutral-600"
+                class="border py-2 px-3 pe-11 block w-full border-gray-200 shadow-sm text-sm rounded-lg focus:border-blue-500 focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none"
                 placeholder="ejemplo av San Agustin #289"
               />
             </div>
