--- a/src/app/Ui/Modules/configuration/Usuarios/page/usuario-page/usuario-page.component.html
+++ b/src/app/Ui/Modules/configuration/Usuarios/page/usuario-page/usuario-page.component.html
@@ -10,7 +10,7 @@
                 <div
                   class="bg-white border border-gray-200 rounded-xl shadow-sm overflow-hidden dark:bg-neutral-900 dark:border-neutral-700"
                 >
-                  <table-usuarios />
+                  <table-usuarios [DatosUsuario]="DatosUsuarios" />
                 </div>
               </div>
             </div>
