--- a/src/app/Ui/Modules/configuration/Usuarios/page/actualizar-usuario-page/actualizar-usuario-page.component.html
+++ b/src/app/Ui/Modules/configuration/Usuarios/page/actualizar-usuario-page/actualizar-usuario-page.component.html
@@ -29,58 +29,16 @@
             </div>
 
             <div class="sm:col-span-9">
-              <div class="sm:col-span-9">
-                <select
-                formControlName="rucEmpresa"
+              <select
+                formControlName="rucempresa"
                 [(ngModel)]="usuario.rucempresa"
-                title="none"
-                  data-hs-select='{
-                  "hasSearch": true,
-                  "searchPlaceholder": "Buscar por Ruc...",
-                  "searchClasses": "block w-full text-sm border-gray-200 rounded-lg focus:border-blue-500 focus:ring-blue-500 before:absolute before:inset-0 before:z-[1] dark:bg-neutral-900 dark:border-neutral-700 dark:text-neutral-400 dark:placeholder-neutral-500 py-2 px-3",
-                  "searchWrapperClasses": "bg-white p-2 -mx-1 sticky top-0 dark:bg-neutral-900",
-                  "placeholder": "Seleccionar Empresa...",
-                  "toggleTag": "<button type=\"button\" aria-expanded=\"false\"><span class=\"me-2\" data-icon></span><span class=\"text-gray-800 dark:text-neutral-200 \" data-title></span></button>",
-                  "toggleClasses": "hs-select-disabled:pointer-events-none hs-select-disabled:opacity-50 relative py-3 ps-4 pe-9 flex gap-x-2 text-nowrap w-full cursor-pointer bg-white border border-gray-200 rounded-lg text-start text-sm focus:outline-none focus:ring-2 focus:ring-blue-500 dark:bg-neutral-900 dark:border-neutral-700 dark:text-neutral-400 dark:focus:outline-none dark:focus:ring-1 dark:focus:ring-neutral-600",
-                  "dropdownClasses": "border mt-2 max-h-72 pb-1 px-1 space-y-0.5 z-20 w-full bg-white border border-gray-200 rounded-lg overflow-hidden overflow-y-auto [&::-webkit-scrollbar]:w-2 [&::-webkit-scrollbar-thumb]:rounded-full [&::-webkit-scrollbar-track]:bg-gray-100 [&::-webkit-scrollbar-thumb]:bg-gray-300 dark:[&::-webkit-scrollbar-track]:bg-neutral-700 dark:[&::-webkit-scrollbar-thumb]:bg-neutral-500 dark:bg-neutral-900 dark:border-neutral-700",
-                  "optionClasses": "py-2 px-4 w-full text-sm text-gray-800 cursor-pointer hover:bg-gray-100 rounded-lg focus:outline-none focus:bg-gray-100 dark:bg-neutral-900 dark:hover:bg-neutral-800 dark:text-neutral-200 dark:focus:bg-neutral-800",
-                  "optionTemplate": "<div><div class=\"flex items-center\"><div class=\"me-2\" data-icon></div><div class=\"text-gray-800 dark:text-neutral-200 \" data-title></div></div></div>",
-                  "extraMarkup": "<div class=\"absolute top-1/2 end-3 -translate-y-1/2\"><svg class=\"shrink-0 size-3.5 text-gray-500 dark:text-neutral-500 \" xmlns=\"http://www.w3.org/2000/svg\" width=\"24\" height=\"24\" viewBox=\"0 0 24 24\" fill=\"none\" stroke=\"currentColor\" stroke-width=\"2\" stroke-linecap=\"round\" stroke-linejoin=\"round\"><path d=\"m7 15 5 5 5-5\"/><path d=\"m7 9 5-5 5 5\"/></svg></div>"
-                  }'
-                  class="hidden mt-5 "
-                >
+                class="form-select" aria-label="Default select example">
+                  <option disabled selected>{{datosUsuario.rucempresa}} (Actual)</option>
                   @for (item of DatosEmpresas; track $index) {
-                    <option [value]="item.rucempresa" >
-                    {{item.rucempresa}} - {{item.razonsocial}}
-                  </option>
+                    <option [value]="item.rucempresa" >{{item.rucempresa}} - {{item.razonsocial}}</option>
                   }
                 </select>
-              </div>
             </div>
-
-            <!-- End Col -->
-
-            <!-- <div class="sm:col-span-3">
-              <label
-                for="af-account-email"
-                class="inline-block text-sm text-gray-800 mt-2.5"
-              >
-                Usuario
-              </label>
-            </div>
-
-
-            <div class="sm:col-span-9">
-              <input
-                [(ngModel)]="usuario.idusuario"
-                formControlName="idUsuario"
-                [value]="datosUsuario.idusuario"
-                id="af-account-email"
-                #disabled
-                type="text"
-                class="border py-2 px-3 pe-11 block w-full border-gray-200 shadow-sm text-sm rounded-lg focus:border-blue-500 focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none "
-              />
-            </div> -->
 
             <div class="sm:col-span-3">
               <label
@@ -95,7 +53,7 @@
             <div class="sm:col-span-9">
               <input
                 [(ngModel)]="usuario.nombreusuario"
-                formControlName="nombreUsuario"
+                formControlName="nombreusuario"
                 [value]="datosUsuario.nombreusuario"
                 id="af-account-email"
                 type="text"
@@ -145,28 +103,12 @@
               <select
               formControlName="rolUsuario"
               [(ngModel)]="usuario.cargo"
-              title="none"
-                data-hs-select='{
-                "hasSearch": true,
-                "searchPlaceholder": "Buscar por Ruc...",
-                "searchClasses": "block w-full text-sm border-gray-200 rounded-lg focus:border-blue-500 focus:ring-blue-500 before:absolute before:inset-0 before:z-[1] dark:bg-neutral-900 dark:border-neutral-700 dark:text-neutral-400 dark:placeholder-neutral-500 py-2 px-3",
-                "searchWrapperClasses": "bg-white p-2 -mx-1 sticky top-0 dark:bg-neutral-900",
-                "placeholder": "Seleccionar Usuario...",
-                "toggleTag": "<button type=\"button\" aria-expanded=\"false\"><span class=\"me-2\" data-icon></span><span class=\"text-gray-800 dark:text-neutral-200 \" data-title></span></button>",
-                "toggleClasses": "hs-select-disabled:pointer-events-none hs-select-disabled:opacity-50 relative py-3 ps-4 pe-9 flex gap-x-2 text-nowrap w-full cursor-pointer bg-white border border-gray-200 rounded-lg text-start text-sm focus:outline-none focus:ring-2 focus:ring-blue-500 dark:bg-neutral-900 dark:border-neutral-700 dark:text-neutral-400 dark:focus:outline-none dark:focus:ring-1 dark:focus:ring-neutral-600",
-                "dropdownClasses": "border mt-2 max-h-72 pb-1 px-1 space-y-0.5 z-20 w-full bg-white border border-gray-200 rounded-lg overflow-hidden overflow-y-auto [&::-webkit-scrollbar]:w-2 [&::-webkit-scrollbar-thumb]:rounded-full [&::-webkit-scrollbar-track]:bg-gray-100 [&::-webkit-scrollbar-thumb]:bg-gray-300 dark:[&::-webkit-scrollbar-track]:bg-neutral-700 dark:[&::-webkit-scrollbar-thumb]:bg-neutral-500 dark:bg-neutral-900 dark:border-neutral-700",
-                "optionClasses": "py-2 px-4 w-full text-sm text-gray-800 cursor-pointer hover:bg-gray-100 rounded-lg focus:outline-none focus:bg-gray-100 dark:bg-neutral-900 dark:hover:bg-neutral-800 dark:text-neutral-200 dark:focus:bg-neutral-800",
-                "optionTemplate": "<div><div class=\"flex items-center\"><div class=\"me-2\" data-icon></div><div class=\"text-gray-800 dark:text-neutral-200 \" data-title></div></div></div>",
-                "extraMarkup": "<div class=\"absolute top-1/2 end-3 -translate-y-1/2\"><svg class=\"shrink-0 size-3.5 text-gray-500 dark:text-neutral-500 \" xmlns=\"http://www.w3.org/2000/svg\" width=\"24\" height=\"24\" viewBox=\"0 0 24 24\" fill=\"none\" stroke=\"currentColor\" stroke-width=\"2\" stroke-linecap=\"round\" stroke-linejoin=\"round\"><path d=\"m7 15 5 5 5-5\"/><path d=\"m7 9 5-5 5 5\"/></svg></div>"
-                }'
-                class="hidden mt-5 "
-              >
-                @for (item of DatosRoles; track $index) {
-                  <option [value]="item.rol" >
-                  {{item.rol}}
-                </option>
-                }
-              </select>
+                class="form-select" aria-label="Default select example">
+                  <option disabled selected>{{datosUsuario.cargo}} (Actual)</option>
+                  @for (item of DatosRoles; track $index) {
+                    <option [value]="item.rol" > {{item.rol}}</option>
+                  }
+                </select>
             </div>
 
             <div class="sm:col-span-3">
@@ -184,7 +126,7 @@
                 [disabled]="!formularioRegistro.valid"
                 [(ngModel)]="usuario.contrasenia"
                 [value]="datosUsuario.contrasenia"
-                formControlName="contraseniaUsuario"
+                formControlName="contrasenia"
                 id="af-account-email"
                 type="text"
                 class="border py-2 px-3 pe-11 block w-full border-gray-200 shadow-sm text-sm rounded-lg focus:border-blue-500 focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none "
@@ -193,10 +135,33 @@
             </div>
 
 
+            <div class="sm:col-span-3">
+              <label
+                for="af-account-email"
+                class="inline-block text-sm text-gray-800 mt-2.5 "
+              >
+                Estado
+              </label>
+            </div>
+            <!-- End Col -->
+
+            <div class="sm:col-span-9">
+              <select
+              formControlName="estado"
+              [(ngModel)]="usuario.estado"
+                class="form-select" aria-label="Default select example">
+                  <option disabled selected>{{datosUsuario.estado}} (Actual)</option>
+                  <option value="1">Activo</option>
+                  <option value="0">Inhabilitar</option>
+                </select>
+            </div>
+
+
+
           </div>
 
           <div class="modal-footer mt-3">
-            <button (click)="cerrarRegistro()" type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+            <button (click)="cerrarRegistro()" type="button" class="btn btn-secondary">Cerrar</button>
             <button
               type="submit"
               class="py-2 px-3 inline-flex items-center gap-x-2 text-sm font-medium rounded-lg border border-transparent bg-blue-600 text-white hover:bg-blue-700 focus:outline-none focus:bg-blue-700 disabled:opacity-50 disabled:pointer-events-none"
