--- a/src/app/Ui/Modules/configuration/Usuarios/components/tables/table-usuarios/table-usuarios.component.html
+++ b/src/app/Ui/Modules/configuration/Usuarios/components/tables/table-usuarios/table-usuarios.component.html
@@ -1,4 +1,18 @@
 <header-table-usuarios />
+<!-- =================================================================================== -->
+<!-- Apartado filtros -->
+<!-- =================================================================================== -->
+<div class="container">
+  <mat-form-field class="w-[20rem]">
+    <mat-label>Buscar usuario</mat-label>
+    <input
+      matInput
+      (keyup)="applyFilter($event)"
+      placeholder="Ingresar descripción"
+      #input
+    />
+  </mat-form-field>
+</div>
 
 <div class="mat-elevation-z8">
   <table mat-table [dataSource]="dataSource">
@@ -62,7 +76,7 @@
     <!-- =================================================================================== -->
     <!-- Detalle -->
     <!-- =================================================================================== -->
-    <ng-container matColumnDef="detalle">
+    <!-- <ng-container matColumnDef="detalle">
       <th mat-header-cell *matHeaderCellDef class="mat-primary">Detalle</th>
       <td class="rol" mat-cell *matCellDef="let element">
         <button
@@ -75,7 +89,7 @@
           <img src="../../../../../../assets/svg/icon_ver.svg" alt="" />
         </button>
       </td>
-    </ng-container>
+    </ng-container> -->
 
     <!-- =================================================================================== -->
     <!-- Opciones -->
@@ -84,7 +98,13 @@
       <th mat-header-cell *matHeaderCellDef mat-sort-header></th>
       <td mat-cell *matCellDef="let row">
         <mat-menu #menu="matMenu">
-          <button (click)="ObtenerDetalleUsuario(row.idusuario)" type="button" class="btn" data-bs-toggle="modal" data-bs-target="#modalActualizarUsuario">
+          <button
+            (click)="ObtenerDetalleUsuario(row.idusuario)"
+            type="button"
+            class="btn"
+            data-bs-toggle="modal"
+            data-bs-target="#modalActualizarUsuario"
+          >
             Actualizar
           </button>
         </mat-menu>
