14_02_2025 CAMBIO HA PALABRAS DEL ESTADO ACTUAL DEL USUARIO

--- a/src/app/Ui/Modules/configuration/Usuarios/page/actualizar-usuario-page/actualizar-usuario-page.component.html
+++ b/src/app/Ui/Modules/configuration/Usuarios/page/actualizar-usuario-page/actualizar-usuario-page.component.html
@@ -150,7 +150,12 @@
               formControlName="estado"
               [(ngModel)]="usuario.estado"
                 class="form-select" aria-label="Default select example">
-                  <option disabled selected>{{datosUsuario.estado}} (Actual)</option>
+                  <option disabled selected>
+                    @if (datosUsuario.estado == '1') {
+                      Activo
+                    }@else {
+                      Inactivo
+                    }
                   <option value="1">Activo</option>
                   <option value="0">Inhabilitar</option>
                 </select>
