--- a/src/app/Ui/Modules/configuration/Usuarios/page/actualizar-usuario-page/actualizar-usuario-page.component.html
+++ b/src/app/Ui/Modules/configuration/Usuarios/page/actualizar-usuario-page/actualizar-usuario-page.component.html
@@ -166,7 +166,7 @@
           </div>
 
           <div class="modal-footer mt-3">
-            <button (click)="cerrarRegistro()" type="button" class="btn btn-secondary">Cerrar</button>
+            <button (click)="cerrarRegistro()" type="button" class="btn btn-secondary"  data-bs-dismiss="modal">Cerrar</button>
             <button
               type="submit"
               class="py-2 px-3 inline-flex items-center gap-x-2 text-sm font-medium rounded-lg border border-transparent bg-blue-600 text-white hover:bg-blue-700 focus:outline-none focus:bg-blue-700 disabled:opacity-50 disabled:pointer-events-none"
